<resources>
    <string name="app_name">2048</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="resume_game">Resume Game</string>
    <string name="new_game">New Game</string>
    <string name="leader_board">Leader Board</string>
    <string name="how_to_play">How To Play</string>
    <string name="menu">Menu</string>
    <string name="_2048">2048</string>
    <string name="score">Score</string>
    <string name="best">Best</string>
    <string name="_0">0</string>
    <string name="score_0">0</string>
    <string name="leaderboard">leaderboard</string>
    <string name="OK">Ok</string>
    <string name="continueOn">continue</string>
    <string name="gameover_dialog">Game Over!</string>
    <string name="gameover_message">You have no more moves!</string>
    <string name="gamewin_dialog">You Won!</string>
    <string name="gamewin_message">Congrats on making 2048. \nClick continue to play beyond 2048. \nPress new game to try again.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="goal_of_2048">Join the numbers and get to the 2048 tile!</string>
</resources>
