<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/beige"
    tools:context=".MenuFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:text="@string/menu"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/btnResumeGame"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:background="@color/slate"
            android:layout_weight="1"
            android:text="@string/resume_game" />
        <Button
            android:id="@+id/btnNewGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:paddingEnd="18dp"
            android:paddingStart="18dp"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:background="@color/slate"
            android:layout_weight="1"
            android:text="@string/new_game" />
        <Button
            android:id="@+id/btnLeaderBoard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:background="@color/slate"
            android:layout_weight="1"
            android:text="@string/leader_board" />
    </LinearLayout>


</LinearLayout>