<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="8"
    android:paddingTop="30dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingBottom="40dp"
    tools:context=".GameAreaFragment"
    android:background="@color/beige">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="3">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="2048"
            android:textSize="60sp"
            android:textStyle="bold">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="2">
        <Button
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="Score\n0">
        </Button>
        <Button
            android:id="@+id/btnMenu"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:textColor="@color/white"
            android:background="@color/slate"
            android:layout_weight="1"
            android:text="@string/menu" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="2">
        <Button
            android:id="@+id/highscore"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="HighScore\n0">
        </Button>
        <Button
            android:id="@+id/btnLeaderBoard"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:textColor="@color/white"
            android:background="@color/slate"
            android:layout_weight="1"
            android:text="@string/leaderboard" />
    </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/goal_of_2048"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:textStyle="bold">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="vertical"
        android:background="@drawable/background_text_view_slate"
        android:layout_marginTop="40dp"
        android:id="@+id/gameArea">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">
        <Button
            android:id="@+id/btnZero"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/background_btn"
            android:layout_marginEnd="8dp"
            android:textStyle="bold"
            android:textSize="25sp"
            android:text=" ">
        </Button>
        <Button
            android:id="@+id/btnOne"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/background_btn"
            android:layout_marginEnd="8dp"
            android:textStyle="bold"
            android:textSize="25sp"
            android:text=" ">
        </Button>
        <Button
            android:id="@+id/btnTwo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/background_btn"
            android:layout_marginEnd="8dp"
            android:textStyle="bold"
            android:textSize="25sp"
            android:text=" ">
        </Button>
        <Button
            android:id="@+id/btnThree"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/background_btn"
            android:textStyle="bold"
            android:textSize="25sp"
            android:text=" ">
        </Button>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">
            <Button
                android:id="@+id/btnFour"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/background_btn"
                android:layout_marginEnd="8dp"
                android:textStyle="bold"
                android:textSize="25sp"
                android:text=" ">
            </Button>
            <Button
                android:id="@+id/btnFive"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/background_btn"
                android:layout_marginEnd="8dp"
                android:textStyle="bold"
                android:textSize="25sp"
                android:text=" ">
            </Button>
            <Button
                android:id="@+id/btnSix"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/background_btn"
                android:layout_marginEnd="8dp"
                android:textStyle="bold"
                android:textSize="25sp"
                android:text=" ">
            </Button>
            <Button
                android:id="@+id/btnSeven"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/background_btn"
                android:textStyle="bold"
                android:textSize="25sp"
                android:text=" ">
            </Button>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">
            <Button
                android:id="@+id/btnEight"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/background_btn"
                android:layout_marginEnd="8dp"
                android:textStyle="bold"
                android:textSize="25sp"
                android:text=" ">
            </Button>
            <Button
                android:id="@+id/btnNine"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/background_btn"
                android:layout_marginEnd="8dp"
                android:textStyle="bold"
                android:textSize="25sp"
                android:text=" ">
            </Button>
            <Button
                android:id="@+id/btnTen"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/background_btn"
                android:layout_marginEnd="8dp"
                android:textStyle="bold"
                android:textSize="25sp"
                android:text=" ">
            </Button>
            <Button
                android:id="@+id/btnEleven"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/background_btn"
                android:textStyle="bold"
                android:textSize="25sp"
                android:text=" ">
            </Button>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">
            <Button
                android:id="@+id/btnTwelve"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/background_btn"
                android:layout_marginEnd="8dp"
                android:textStyle="bold"
                android:textSize="25sp"
                android:text=" ">
            </Button>
            <Button
                android:id="@+id/btnThirteen"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/background_btn"
                android:layout_marginEnd="8dp"
                android:textStyle="bold"
                android:textSize="25sp"
                android:text=" ">
            </Button>
            <Button
                android:id="@+id/btnFourteen"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/background_btn"
                android:layout_marginEnd="8dp"
                android:textStyle="bold"
                android:textSize="25sp"
                android:text=" ">
            </Button>
            <Button
                android:id="@+id/btnFifteen"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/background_btn"
                android:textStyle="bold"
                android:textSize="25sp"
                android:text=" ">
            </Button>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>